Nettoyage dans le code + ajout de javadoc